--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 -->
 <html>
 	<head>
-		<title>Colin Stanford - Developer</title>
+		<title>Colin Stanford Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/fontawesome-all.min.css">
 	</head>
 	<body class="is-preload">
 
@@ -17,132 +18,131 @@
 			<div id="wrapper">
 
 				<!-- Main -->
-					<div id="main">
-						<div class="inner">
+				<div id="main">
+					<div class="inner">
 
-							<!-- Header -->
-								<header id="header">
-									<a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
-									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">BlueSky</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Github</span></a></li>
-										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">LinkedIn</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Email</span></a></li>
-									</ul>
+						<!-- Header -->
+						<header id="header">
+							<!-- <a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a> -->
+							<ul class="icons">
+								<li><a href="https://github.com/jcs-denverdev" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
+								<li><a href="https://bsky.app/profile/colinstanford.bsky.social" class="icon brands fa-brands fa-bluesky"><span class="label">BlueSky</span></a></li>
+								<li><a href="www.linkedin.com/in/jcolin-stanford" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+								<li><a href="mailto:j.colin.stanford@gmail.com" class="icon solid fa-envelope" target="_blank"><span class="label">Email</span></a></li>
+							</ul>
+						</header>
+
+						<!-- Banner -->
+						<section id="banner">
+							<div class="content">
+								<header>
+									<h1>Hi, I'm Colin,<br />
+									Your Next Software Engineer</h1>
+									<p>Based in Denver, CO</p>
 								</header>
+								<!-- <p>Since my first introduction to writing code, I have been intrigued by the offer to learn new skills and help people get the most out of their online experience. Having developed skills from a variety of other fields, I have the right mind-set to handle any new challenge.</p> -->
+								<ul class="actions">
+									<li><a href="#" class="button big">Get in touch</a></li>
+								</ul>
+							</div>
+							<span class="image object">
+								<img src="images/headshot.jpg" alt="colin's headshot" />
+							</span>
+						</section>
 
-							<!-- Banner -->
-								<section id="banner">
-									<div class="content">
-										<header>
-											<h1>Hi, I'm Colin,<br />
-											your next Software Engineer</h1>
-											<p>Based in Denver, CO</p>
-										</header>
-										<p>Since my first introduction to writing code, I have been intrigued by the offer to learn new skills and help people get the most out of their online experience. Having developed skills from a variety of other fields, I have the right mind-set to handle any new challenge.</p>
-										<ul class="actions">
-											<li><a href="#" class="button big">Get in touch</a></li>
-										</ul>
-									</div>
-									<span class="image object">
-										<img src="images/headshot.jpg" alt="colin's headshot" />
-									</span>
-								</section>
-
-							<!-- Section -->
-								<section>
-									<header class="major">
-										<h2>Latest Projects</h2>
-									</header>
-									<div class="posts">
-										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-											<h3>Interdum aenean</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<h3>Nulla amet dolore</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<h3>Tempus ullamcorper</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3>Sed etiam facilis</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3>Feugiat lorem aenean</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3>Amet varius aliquam</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-									</div>
-								</section>
-
-						</div>
-					</div>
-
-				<!-- Sidebar -->
-					<div id="sidebar">
-						<div class="inner">
-
-							<!-- Search -->
-								<section id="search" class="alt">
-									<form method="post" action="#">
-										<input type="text" name="query" id="query" placeholder="Search" />
-									</form>
-								</section>
-
-							<!-- Menu -->
-							<!-- Section -->
-								<section>
-									<header class="major">
-										<h2>Get in touch</h2>
-									</header>
-									<p>Reach out and let's build the website of your dreams!</p>
-									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">j.colin.stanford@gmail.com</a></li>
-										<li class="icon solid fa-linkedin"><a href="#">LinkedIn</a></li>
-										<li class="icon brands fa-github">github.com/jcs-denverdev</li>
-										
+						<!-- Section -->
+						<section>
+							<header class="major">
+								<h2>Latest Projects</h2>
+							</header>
+							<div class="posts">
+								<article>
+									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<h3>Interdum aenean</h3>
+									<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<ul class="actions">
+										<li><a href="#" class="button">More</a></li>
 									</ul>
-								</section>
+								</article>
+								<article>
+									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<h3>Nulla amet dolore</h3>
+									<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<ul class="actions">
+										<li><a href="#" class="button">More</a></li>
+									</ul>
+								</article>
+								<article>
+									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+									<h3>Tempus ullamcorper</h3>
+									<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<ul class="actions">
+										<li><a href="#" class="button">More</a></li>
+									</ul>
+								</article>
+								<article>
+									<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+									<h3>Sed etiam facilis</h3>
+									<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<ul class="actions">
+										<li><a href="#" class="button">More</a></li>
+									</ul>
+								</article>
+								<article>
+									<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+									<h3>Feugiat lorem aenean</h3>
+									<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<ul class="actions">
+										<li><a href="#" class="button">More</a></li>
+									</ul>
+								</article>
+								<article>
+									<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+									<h3>Amet varius aliquam</h3>
+									<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<ul class="actions">
+										<li><a href="#" class="button">More</a></li>
+									</ul>
+								</article>
+							</div>
+						</section>
 
-							<!-- Footer -->
-								<footer id="footer">
-									<p class="copyright">&copy; ColinStanford. All Rights Reserved</p>
-								</footer>
-
-						</div>
 					</div>
+				</div>
 
+			<!-- Sidebar -->
+				<div id="sidebar">
+					<div class="inner">
+
+						<!-- Search -->
+						<!-- <section id="search" class="alt">
+							<form method="post" action="#">
+								<input type="text" name="query" id="query" placeholder="Search" />
+							</form>
+						</section> -->
+
+						<!-- Menu -->
+						<!-- Section -->
+						<section>
+							<header class="major">
+								<h2>Get in touch</h2>
+							</header>
+							<!-- <p>Reach out and let's build the website of your dreams!</p> -->
+							<ul class="contact">
+								<li class="icon solid fa-envelope"><a href="mailto:j.colin.stanford@gmail.com" target="_blank">j.colin.stanford@gmail.com</a></li>
+								<li class="icon brands fa-linkedin"><a href="www.linkedin.com/in/jcolin-stanford" target="_blank">linkedin.com/in/jcolin-stanford</a></li>
+								<li class="icon brands fa-github"><a href="https://github.com/jcs-denverdev" target="_blank">github.com/jcs-denverdev</li>
+								<li><i class="fa-brands fa-bluesky"></i><a href="https://bsky.app/profile/colinstanford.bsky.social" target="_blank">@colinstanford.bsky.social</li>
+							</ul>
+						</section>
+
+						<!-- Footer -->
+						<footer id="footer">
+							<p class="copyright">&copy; ColinStanford. All Rights Reserved</p>
+						</footer>
+
+					</div>
+				</div>
 			</div>
 
 		<!-- Scripts -->
