added other pages

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <html>
 	<head>
 		<title>Colin Stanford Portfolio</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="assets/css/fontawesome-all.min.css">
+		<meta charset="utf-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
+		<link rel="stylesheet" href="assets/css/main.css"/>
+		<link rel="stylesheet" href="assets/css/fontawesome-all.min.css"/>
 	</head>
 	<body class="is-preload">
 
@@ -42,7 +42,7 @@
 								</header>
 								<!-- <p>Since my first introduction to writing code, I have been intrigued by the offer to learn new skills and help people get the most out of their online experience. Having developed skills from a variety of other fields, I have the right mind-set to handle any new challenge.</p> -->
 								<ul class="actions">
-									<li><a href="#" class="button big">Get in touch</a></li>
+									<li><a href="about.html" class="button big">About Me</a></li>
 								</ul>
 							</div>
 							<span class="image object">
@@ -57,23 +57,23 @@
 							</header>
 							<div class="posts">
 								<article>
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-									<h3>Interdum aenean</h3>
-									<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<a href="hairsalon/index.html" class="image" target="_blank"><img src="images/pic01.jpg" alt=""/></a>
+									<h3>Salon Website</h3>
+									<p>HTML5, CSS3, and JavaScript. A stylistic website for a beauty salon.</p>
 									<ul class="actions">
 										<li><a href="#" class="button">More</a></li>
 									</ul>
 								</article>
 								<article>
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-									<h3>Nulla amet dolore</h3>
-									<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<a href="Day-Planner/index.html" class="image" target="_blank"><img src="images/pic02.jpg" alt=""/></a>
+									<h3>Day Planner</h3>
+									<p>HTML5, CSS3, JavaScript. Web application to help plan and organize your day.</p>
 									<ul class="actions">
 										<li><a href="#" class="button">More</a></li>
 									</ul>
 								</article>
 								<article>
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image" target="_blank"><img src="images/pic03.jpg" alt=""/></a>
 									<h3>Tempus ullamcorper</h3>
 									<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 									<ul class="actions">
@@ -81,7 +81,7 @@
 									</ul>
 								</article>
 								<article>
-									<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/pic04.jpg" alt=""/></a>
 									<h3>Sed etiam facilis</h3>
 									<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 									<ul class="actions">
@@ -89,7 +89,7 @@
 									</ul>
 								</article>
 								<article>
-									<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/pic05.jpg" alt=""/></a>
 									<h3>Feugiat lorem aenean</h3>
 									<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 									<ul class="actions">
@@ -97,7 +97,7 @@
 									</ul>
 								</article>
 								<article>
-									<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/pic06.jpg" alt=""/></a>
 									<h3>Amet varius aliquam</h3>
 									<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 									<ul class="actions">
