images and about section

--- a/about.html
+++ b/about.html
@@ -38,10 +38,15 @@
 							<h1>About Me</h1>
 						</header>
 
-						<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
+						<span class="image main">
+							<img src="images/sandpiper.jpeg" alt="friends and I at sandpiper golf course 10th hole" />
+							<img src="images/hiking-pic.jpeg" alt="hiking in Boulder" />
+							<img src="images/bb.jpeg" alt="fancily dressed" />
+							<!-- <img src="images/cats.jpeg" alt="my cats cuddling" /> -->
+						</span>
 
-						<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-				
+						<p>Originally from Altadena, California, I'm a Denver-based software developer who brings both technical expertise and a well-rounded perspective to my work. When I'm not writing code, you'll find me at a Denver/Aurora golf course working on my swing, at Hapa Sushi for happy hour spicy tuna rolls, or at home re-watching episodes of It's Always Sunny in Philadelphia. I share my life with my fiancé and our two cats.</p>
+
 						<hr class="major" />
 
 					</section>
@@ -49,32 +54,31 @@
 			</div>
 
 				<!-- Sidebar -->
-					<div id="sidebar">
-						<div class="inner">
+			<div id="sidebar">
+				<div class="inner">
 
-							<!-- Section -->
-							<section>
-								<header class="major">
-									<h2>Get in touch</h2>
-								</header>
-							<!-- <p>Reach out and let's build the website of your dreams!</p> -->
-							<ul class="contact">
-								<li class="icon solid fa-envelope"><a href="mailto:j.colin.stanford@gmail.com" target="_blank">j.colin.stanford@gmail.com</a></li>
-								<li class="icon brands fa-linkedin"><a href="www.linkedin.com/in/jcolin-stanford" target="_blank">linkedin.com/in/jcolin-stanford</a></li>
-								<li class="icon brands fa-github"><a href="https://github.com/jcs-denverdev" target="_blank">github.com/jcs-denverdev</li>
-								<li><i class="fa-brands fa-bluesky"></i><a href="https://bsky.app/profile/colinstanford.bsky.social" target="_blank">@colinstanford.bsky.social</li>
-							</ul>
-						</section>
+					<!-- Section -->
+					<section>
+						<header class="major">
+							<h2>Get in touch</h2>
+						</header>
+					<!-- <p>Reach out and let's build the website of your dreams!</p> -->
+						<ul class="contact">
+							<li class="icon solid fa-envelope"><a href="mailto:j.colin.stanford@gmail.com" target="_blank">j.colin.stanford@gmail.com</a></li>
+							<li class="icon brands fa-linkedin"><a href="www.linkedin.com/in/jcolin-stanford" target="_blank">linkedin.com/in/jcolin-stanford</a></li>
+							<li class="icon brands fa-github"><a href="https://github.com/jcs-denverdev" target="_blank">github.com/jcs-denverdev</li>
+							<li><i class="fa-brands fa-bluesky"></i><a href="https://bsky.app/profile/colinstanford.bsky.social" target="_blank">@colinstanford.bsky.social</li>
+						</ul>
+					</section>
 
-							<!-- Footer -->
-								<footer id="footer">
-									<p class="copyright">&copy; ColinStanford. All Rights Reserved</p>
-								</footer>
+					<!-- Footer -->
+					<footer id="footer">
+						<p class="copyright">&copy; ColinStanford. All Rights Reserved</p>
+					</footer>
 
-						</div>
-					</div>
-
+				</div>
 			</div>
+		</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
