--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<div class="content">
 								<header>
 									<h1>Hi, I'm Colin,<br />
-									Your Next Software Engineer</h1>
+									Your Next Software Developer</h1>
 									<p>Based in Denver, CO</p>
 								</header>
 								<!-- <p>Since my first introduction to writing code, I have been intrigued by the offer to learn new skills and help people get the most out of their online experience. Having developed skills from a variety of other fields, I have the right mind-set to handle any new challenge.</p> -->
