--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 								</ul>
 							</div>
 							<span class="image object">
-								<img src="images/headshot.jpg" alt="colin's headshot" />
+								<img src="images/blazer.png" alt="colin's headshot" />
 							</span>
 						</section>
 
@@ -88,7 +88,7 @@
 										<li><a href="#" class="button">More</a></li>
 									</ul>
 								</article>
-								<article>
+								<!-- <article>
 									<a href="#" class="image"><img src="images/pic05.jpg" alt=""/></a>
 									<h3>Feugiat lorem aenean</h3>
 									<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
@@ -103,7 +103,7 @@
 									<ul class="actions">
 										<li><a href="#" class="button">More</a></li>
 									</ul>
-								</article>
+								</article> -->
 							</div>
 						</section>
 
