--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 							<ul class="icons">
 								<li><a href="https://github.com/jcs-denverdev" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
 								<li><a href="https://bsky.app/profile/colinstanford.bsky.social" class="icon brands fa-brands fa-bluesky"><span class="label">BlueSky</span></a></li>
-								<li><a href="www.linkedin.com/in/jcolin-stanford" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+								<li><a href="www.linkedin.com/in/jcolinstanford" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
 								<li><a href="mailto:j.colin.stanford@gmail.com" class="icon solid fa-envelope" target="_blank"><span class="label">Email</span></a></li>
 							</ul>
 						</header>
@@ -130,7 +130,7 @@
 							<!-- <p>Reach out and let's build the website of your dreams!</p> -->
 							<ul class="contact">
 								<li class="icon solid fa-envelope"><a href="mailto:j.colin.stanford@gmail.com" target="_blank">j.colin.stanford@gmail.com</a></li>
-								<li class="icon brands fa-linkedin"><a href="www.linkedin.com/in/jcolin-stanford" target="_blank">linkedin.com/in/jcolin-stanford</a></li>
+								<li class="icon brands fa-linkedin"><a href="www.linkedin.com/in/jcolinstanford" target="_blank">linkedin.com/in/jcolin-stanford</a></li>
 								<li class="icon brands fa-github"><a href="https://github.com/jcs-denverdev" target="_blank">github.com/jcs-denverdev</li>
 								<li><i class="fa-brands fa-bluesky"></i><a href="https://bsky.app/profile/colinstanford.bsky.social" target="_blank">@colinstanford.bsky.social</li>
 							</ul>
