removed linkedin link since it doesn't work

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 							<ul class="icons">
 								<li><a href="https://github.com/jcs-denverdev" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
 								<li><a href="https://bsky.app/profile/colinstanford.bsky.social" class="icon brands fa-brands fa-bluesky"><span class="label">BlueSky</span></a></li>
-								<li><a href="www.linkedin.com/in/jcolinstanford" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+								<!-- <li><a href="www.linkedin.com/in/jcolinstanford" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li> -->
 								<li><a href="mailto:j.colin.stanford@gmail.com" class="icon solid fa-envelope" target="_blank"><span class="label">Email</span></a></li>
 							</ul>
 						</header>
@@ -57,7 +57,7 @@
 							</header>
 							<div class="posts">
 								<article>
-									<a href="hairsalon/index.html" class="image" target="_blank"><img src="images/pic01.jpg" alt=""/></a>
+									<a href="www.sexysalon.netlify.app" class="image" target="_blank"><img src="images/pic01.jpg" alt=""/></a>
 									<h3>Salon Website</h3>
 									<p>HTML5, CSS3, and JavaScript. A stylistic website for a beauty salon.</p>
 									<ul class="actions">
@@ -65,7 +65,7 @@
 									</ul>
 								</article>
 								<article>
-									<a href="Day-Planner/index.html" class="image" target="_blank"><img src="images/pic02.jpg" alt=""/></a>
+									<a href="www.sexyplanner.netlify.app" class="image" target="_blank"><img src="images/pic02.jpg" alt=""/></a>
 									<h3>Day Planner</h3>
 									<p>HTML5, CSS3, JavaScript. Web application to help plan and organize your day.</p>
 									<ul class="actions">
@@ -130,7 +130,7 @@
 							<!-- <p>Reach out and let's build the website of your dreams!</p> -->
 							<ul class="contact">
 								<li class="icon solid fa-envelope"><a href="mailto:j.colin.stanford@gmail.com" target="_blank">j.colin.stanford@gmail.com</a></li>
-								<li class="icon brands fa-linkedin"><a href="www.linkedin.com/in/jcolinstanford" target="_blank">linkedin.com/in/jcolin-stanford</a></li>
+								<!-- <li class="icon brands fa-linkedin"><a href="www.linkedin.com/in/jcolinstanford" target="_blank">linkedin.com/in/jcolin-stanford</a></li> -->
 								<li class="icon brands fa-github"><a href="https://github.com/jcs-denverdev" target="_blank">github.com/jcs-denverdev</li>
 								<li><i class="fa-brands fa-bluesky"></i><a href="https://bsky.app/profile/colinstanford.bsky.social" target="_blank">@colinstanford.bsky.social</li>
 							</ul>
