updated latest work links

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 									<h3>Salon Website</h3>
 									<p>HTML5, CSS3, and JavaScript. A stylistic website for a beauty salon.</p>
 									<ul class="actions">
-										<li><a href="#" class="button">More</a></li>
+										<li><a href="www.sexysalon.netlify.app" class="button">More</a></li>
 									</ul>
 								</article>
 								<article>
@@ -69,7 +69,7 @@
 									<h3>Day Planner</h3>
 									<p>HTML5, CSS3, JavaScript. Web application to help plan and organize your day.</p>
 									<ul class="actions">
-										<li><a href="#" class="button">More</a></li>
+										<li><a href="www.sexyplanner.netlify.app" class="button">More</a></li>
 									</ul>
 								</article>
 								<article>
