testing https:// with netlify link

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 							</header>
 							<div class="posts">
 								<article>
-									<a href="www.sexysalon.netlify.app" class="image" target="_blank"><img src="images/pic01.jpg" alt=""/></a>
+									<a href="https://sexysalon.netlify.app" class="image" target="_blank"><img src="images/pic01.jpg" alt=""/></a>
 									<h3>Salon Website</h3>
 									<p>HTML5, CSS3, and JavaScript. A stylistic website for a beauty salon.</p>
 									<ul class="actions">
-										<li><a href="www.sexysalon.netlify.app" class="button">More</a></li>
+										<li><a href="https://sexysalon.netlify.app" class="button">More</a></li>
 									</ul>
 								</article>
 								<article>
