testing other netlify links

--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
 									<h3>Salon Website</h3>
 									<p>HTML5, CSS3, and JavaScript. A stylistic website for a beauty salon.</p>
 									<ul class="actions">
-										<li><a href="https://sexysalon.netlify.app" class="button">More</a></li>
+										<li><a href="https://sexysalon.netlify.app" class="button" target="_blank">More</a></li>
 									</ul>
 								</article>
 								<article>
-									<a href="www.sexyplanner.netlify.app" class="image" target="_blank"><img src="images/pic02.jpg" alt=""/></a>
+									<a href="https://www.sexyplanner.netlify.app" class="image" target="_blank"><img src="images/pic02.jpg" alt=""/></a>
 									<h3>Day Planner</h3>
 									<p>HTML5, CSS3, JavaScript. Web application to help plan and organize your day.</p>
 									<ul class="actions">
-										<li><a href="www.sexyplanner.netlify.app" class="button">More</a></li>
+										<li><a href="https://www.sexyplanner.netlify.app" class="button" target="_blank">More</a></li>
 									</ul>
 								</article>
 								<article>
