checking link for planner project

--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
 									</ul>
 								</article>
 								<article>
-									<a href="https://www.sexyplanner.netlify.app" class="image" target="_blank"><img src="images/pic02.jpg" alt=""/></a>
+									<a href="https://sexyplanner.netlify.app/" class="image" target="_blank"><img src="images/pic02.jpg" alt=""/></a>
 									<h3>Day Planner</h3>
 									<p>HTML5, CSS3, JavaScript. Web application to help plan and organize your day.</p>
 									<ul class="actions">
-										<li><a href="https://www.sexyplanner.netlify.app" class="button" target="_blank">More</a></li>
+										<li><a href="https://sexyplanner.netlify.app/" class="button" target="_blank">More</a></li>
 									</ul>
 								</article>
 								<article>
