--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							</header>
 							<div class="posts">
 								<article>
-									<a href="https://sexysalon.netlify.app" class="image" target="_blank"><img src="images/pic01.jpg" alt=""/></a>
+									<a href="https://sexysalon.netlify.app" class="image" target="_blank"><img src="images/salon-thumbnail.png" alt=""/></a>
 									<h3>Salon Website</h3>
 									<p>HTML5, CSS3, and JavaScript. A stylistic website for a beauty salon.</p>
 									<ul class="actions">
@@ -65,7 +65,7 @@
 									</ul>
 								</article>
 								<article>
-									<a href="https://sexyplanner.netlify.app/" class="image" target="_blank"><img src="images/pic02.jpg" alt=""/></a>
+									<a href="https://sexyplanner.netlify.app/" class="image" target="_blank"><img src="images/planner-thumbnail.png" alt=""/></a>
 									<h3>Day Planner</h3>
 									<p>HTML5, CSS3, JavaScript. Web application to help plan and organize your day.</p>
 									<ul class="actions">
