salon name change

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							</header>
 							<div class="posts">
 								<article>
-									<a href="https://sexysalon.netlify.app" class="image" target="_blank"><img src="images/salon-thumbnail.png" alt=""/></a>
+									<a href="https://paradigmsalon.netlify.app" class="image" target="_blank"><img src="images/salon-thumbnail.png" alt=""/></a>
 									<h3>Salon Website</h3>
 									<p>HTML5, CSS3, and JavaScript. A stylistic website for a beauty salon.</p>
 									<ul class="actions">
