art api project added

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 									</ul>
 								</article>
 								<article>
-									<a href="#" class="image" target="_blank"><img src="images/pic03.jpg" alt=""/></a>
-									<h3>Tempus ullamcorper</h3>
-									<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<a href="https://jcs-denverdev.github.io/art-institute-api/" class="image" target="_blank"><img src="images/art-thumbnail.png" alt=""/></a>
+									<h3>Art Institute of Chicago API</h3>
+									<p>HTML5, CSS3, Javascript. Web API for generating a random work of art.</p>
 									<ul class="actions">
 										<li><a href="#" class="button">More</a></li>
 									</ul>
