--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 							<div class="posts">
 								<article>
 									<a href="https://paradigmsalon.netlify.app" class="image" target="_blank"><img src="images/salon-thumbnail.png" alt=""/></a>
-									<h3>Salon Website</h3>
+									<h3>Paradigm Salon</h3>
 									<p>HTML5, CSS3, and JavaScript. A stylistic website for a beauty salon.</p>
 									<ul class="actions">
-										<li><a href="https://sexysalon.netlify.app" class="button" target="_blank">More</a></li>
+										<li><a href="https://paradigmsalon.netlify.app" class="button" target="_blank">More</a></li>
 									</ul>
 								</article>
 								<article>
@@ -77,7 +77,7 @@
 									<h3>Art Institute of Chicago API</h3>
 									<p>HTML5, CSS3, Javascript. Web API for generating a random work of art.</p>
 									<ul class="actions">
-										<li><a href="#" class="button">More</a></li>
+										<li><a href="https://jcs-denverdev.github.io/art-institute-api/" class="button">More</a></li>
 									</ul>
 								</article>
 								<article>
